<resources>
    <string name="app_name">picsumphotos</string>
    <string name="load">Load</string>
    <string name="author">Author</string>
    <string name="id">Id</string>
    <string name="image">image</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="author1">Author</string>
    <string name="id1">Id</string>
    <string name="delete_local_db">Delete local DB</string>
    <string name="reload_from_web">Reload from web</string>
</resources>