<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="6dp"
    android:layout_height="120dp"
    android:background="#212121"
    android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TVItemId"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFEB3B"
                android:text="@string/id"/>


            <TextView
                android:id="@+id/TVItemAuthor"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:paddingHorizontal="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#FFC107"
                android:text="@string/author"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/IVitem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image" />

</LinearLayout>